# cpp-objective-c-project

./: .gitignore  CMakeLists.txt  README.md  sample
src/: main.cpp
src/linux/: func.cpp  func.h
src/mac/: func.h  func.m
